# KBgetter

./: .readthedocs.yaml  LICENCE  README.rst  pyproject.toml
.readthedocs.yaml_files/: hoverxref.js.download  js  js(1)  saved_resource
docs/: conf.py  index.rst  intro.rst  requirements.txt
docs/source/: API Documentation.rst  API.rst  KBgetter.rst  conf.py  examples.rst  index.rst  intro.rst
kbgetter/: KBgetter.py  __init__.py  get_kb_example.py
tests/: test_kbgetter.py
